--- a/Composer.json
+++ b/Composer.json
@@ -1,1 +1,13 @@
-
+{
+  "name": "BubbleS/NPC-Connect",
+  "keywords": ["NPC-Connect", "libnpc", "libNPCConnect", "lib-npc-connect"],
+    "license": "LGPL-2.0-only",
+    "version": "0.0.1",
+  
+  "extra": {
+    "virion": {
+      "spec": "3.1",
+      "namespace-root": "BubbleS\\NPCConnect",
+    }
+  }
+}
