--- a/.poggit.yml
+++ b/.poggit.yml
@@ -1,6 +1,9 @@
 --- # Poggit-CI Manifest. Open the CI at https://poggit.pmmp.io/ci/BaorzK/libNPCConnect
-build-by-default: true
+build-by-default: false
 branches:
 - main
-projects: []
+projects:
+ libNPCConnect:
+  model: virion
+  type: library
 ...
