--- a/Composer.json
+++ b/Composer.json
@@ -3,6 +3,10 @@
   "keywords": ["NPC-Connect", "libnpc", "libNPCConnect", "lib-npc-connect"],
     "license": "LGPL-2.0-only",
     "version": "0.0.1",
+
+  "autoload": {
+    "classmap": ["src"]
+  },
   
   "extra": {
     "virion": {
