--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: libNPCConnect
 version: 0.0.1
 api: 5.0.0
-main: BubbleS\NPCConnect
+main: BubbleS\NPCConnect\NPCConnect
 author: BubbleStone50
